--- a/mdx/blocks/contact.mdx
+++ b/mdx/blocks/contact.mdx
@@ -1,37 +1,21 @@
 ```typescript
 import { Block } from '@sparkblock/core';
 
-const links = [
-  { link: '/', label: 'Home' },
-  { link: '/about', label: 'About' },
-  {
-    link: '#1',
-    label: 'Resources',
-    links: [
-      { link: '/resource-1', label: 'Resource 1' },
-      { link: '/resource-2', label: 'Resource 2' },
-    ],
-  },
-  { link: '/contact', label: 'Contact' },
-];
-
-const Docs() {
+const Component() {
   return (
+  <>
     <Block
-      type={name}
-      data={data}
-      heading={`Footer title`}
-      paragraph="This is some example paragraph text for this block type. Copy the code in the tab above!"
-      image="logo.PNG"
-      linkTwitter="#"
-      linkInstagram="#"
-      linkFacebook="#"
-      linkLinkedin="#"
-      linkX="#"
-      linkGithub="#"
-      linkMeta="#"
-      linkYoutube="#"
+      type="contact"
+      dropdown={[{ value: "feedback", label: "Feedback" }, { value: "support", label: "Support" }]}
+      image="https://via.placeholder.com/1024"
+      fetchLink="https://path/to/contact.php"
+      captcha={true}
+      siteKey="your-reCAPTCHA-site-key"
+      heading="Contact Title"
+      paragraph={["This is some example paragraph text for this block type. Copy the code in the tab above!"]}
+      buttonLabel="Send Message"
     />
+  </>
   );
 }
 ```
