--- a/mdx/blocks/document.mdx
+++ b/mdx/blocks/document.mdx
@@ -5,12 +5,12 @@ const Component() {
   return (
   <>
     <Block
-      type="video"
-      video="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
-      autoplay={false}
+      type="document"
+      file="https://example.com/document.pdf"
+      fileType="pdf"
+      margin="10px"
+      padding="20px"
       controls={true}
-      loop={true}
-      muted={false}
     />
   </>
   );
