--- a/mdx/blocks/feature.mdx
+++ b/mdx/blocks/feature.mdx
@@ -1,37 +1,21 @@
 ```typescript
 import { Block } from '@sparkblock/core';
+import { IconCube } from '@tabler/icons-react';
 
-const links = [
-  { link: '/', label: 'Home' },
-  { link: '/about', label: 'About' },
-  {
-    link: '#1',
-    label: 'Resources',
-    links: [
-      { link: '/resource-1', label: 'Resource 1' },
-      { link: '/resource-2', label: 'Resource 2' },
-    ],
-  },
-  { link: '/contact', label: 'Contact' },
-];
-
-const Docs() {
+const Component() {
   return (
+  <>
     <Block
-      type={name}
-      data={data}
-      heading={`Footer title`}
+      type="feature"
+      icon={<IconCube />}
+      heading="Feature Title"
       paragraph="This is some example paragraph text for this block type. Copy the code in the tab above!"
-      image="logo.PNG"
-      linkTwitter="#"
-      linkInstagram="#"
-      linkFacebook="#"
-      linkLinkedin="#"
-      linkX="#"
-      linkGithub="#"
-      linkMeta="#"
-      linkYoutube="#"
+      button={{ text: "Learn More", onClick: () => console.log("Clicked!"), color: "white", backgroundColor: "blue" }}
+      button2={{ text: "Contact Us", onClick: () => console.log("Contact Clicked!"), color: "blue", backgroundColor: "transparent", border: "1px solid blue" }}
+      textCenter
+      stack
     />
+  </>
   );
 }
 ```
