--- a/mdx/blocks/footer.mdx
+++ b/mdx/blocks/footer.mdx
@@ -15,22 +15,17 @@ const links = [
   { link: '/contact', label: 'Contact' },
 ];
 
-const Docs() {
+const Component() {
   return (
     <Block
-      type={name}
+      type="footer"
       data={data}
-      heading={`Footer title`}
+      heading="Footer title"
       paragraph="This is some example paragraph text for this block type. Copy the code in the tab above!"
-      image="logo.PNG"
-      linkTwitter="#"
-      linkInstagram="#"
-      linkFacebook="#"
+      image="logo.png"
       linkLinkedin="#"
       linkX="#"
       linkGithub="#"
-      linkMeta="#"
-      linkYoutube="#"
     />
   );
 }
