--- a/mdx/blocks/markdown.mdx
+++ b/mdx/blocks/markdown.mdx
@@ -1,37 +1,22 @@
 ```typescript
 import { Block } from '@sparkblock/core';
 
-const links = [
-  { link: '/', label: 'Home' },
-  { link: '/about', label: 'About' },
-  {
-    link: '#1',
-    label: 'Resources',
-    links: [
-      { link: '/resource-1', label: 'Resource 1' },
-      { link: '/resource-2', label: 'Resource 2' },
-    ],
-  },
-  { link: '/contact', label: 'Contact' },
-];
+const Component() {
 
-const Docs() {
+  const markdownData = "## Welcome to Our Platform\nHere's some **Markdown** content with `code` snippets and more.\n```js\nconsole.log('Hello, world!');\n```"
+
   return (
+  <>
     <Block
-      type={name}
-      data={data}
-      heading={`Footer title`}
+      type="markdown"
+      markdown={data}
+      image="logo.png"
+      heading="Markdown Title"
       paragraph="This is some example paragraph text for this block type. Copy the code in the tab above!"
-      image="logo.PNG"
-      linkTwitter="#"
-      linkInstagram="#"
-      linkFacebook="#"
-      linkLinkedin="#"
-      linkX="#"
-      linkGithub="#"
-      linkMeta="#"
-      linkYoutube="#"
+      textCenter
+      syntaxTheme="vs"
     />
+  </>
   );
 }
 ```
