--- a/mdx/blocks/table.mdx
+++ b/mdx/blocks/table.mdx
@@ -1,37 +1,28 @@
 ```typescript
 import { Block } from '@sparkblock/core';
 
-const links = [
-  { link: '/', label: 'Home' },
-  { link: '/about', label: 'About' },
-  {
-    link: '#1',
-    label: 'Resources',
-    links: [
-      { link: '/resource-1', label: 'Resource 1' },
-      { link: '/resource-2', label: 'Resource 2' },
-    ],
-  },
-  { link: '/contact', label: 'Contact' },
+const data = [
+  { id: '1', name: 'John Doe', email: 'john@doe.com', role: 'Administrator' },
+  { id: '2', name: 'Jane Doe', email: 'jane@doe.com', role: 'User' }
 ];
 
-const Docs() {
+const headers = [
+  { key: 'id', label: 'ID' },
+  { key: 'name', label: 'Name' },
+  { key: 'email', label: 'Email' },
+  { key: 'role', label: 'Role' }
+];
+
+const Component() {
   return (
+  <>
     <Block
-      type={name}
+      type="table"
       data={data}
-      heading={`Footer title`}
-      paragraph="This is some example paragraph text for this block type. Copy the code in the tab above!"
-      image="logo.PNG"
-      linkTwitter="#"
-      linkInstagram="#"
-      linkFacebook="#"
-      linkLinkedin="#"
-      linkX="#"
-      linkGithub="#"
-      linkMeta="#"
-      linkYoutube="#"
+      headers={headers}
+      striped
     />
+  </>
   );
 }
 ```
