--- a/mdx/blocks/markdown.mdx
+++ b/mdx/blocks/markdown.mdx
@@ -9,11 +9,7 @@ const Component() {
   <>
     <Block
       type="markdown"
-      markdown={data}
-      image="logo.png"
-      heading="Markdown Title"
-      paragraph="This is some example paragraph text for this block type. Copy the code in the tab above!"
-      textCenter
+      markdown={markdownData}
       syntaxTheme="vs"
     />
   </>
