--- a/mdx/blocks/feature.mdx
+++ b/mdx/blocks/feature.mdx
@@ -10,8 +10,7 @@ const Component() {
       icon={<IconCube />}
       heading="Feature Title"
       paragraph="This is some example paragraph text for this block type. Copy the code in the tab above!"
-      button={{ text: "Learn More", onClick: () => console.log("Clicked!"), color: "white", backgroundColor: "blue" }}
-      button2={{ text: "Contact Us", onClick: () => console.log("Contact Clicked!"), color: "blue", backgroundColor: "transparent", border: "1px solid blue" }}
+      button={{ text: "Learn More", onClick: () => console.log("Clicked!")}}
       textCenter
       stack
     />
